tests/neg-custom-args/captures/linear-buffer.check
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:13:17 -----------------------------------------------------
13 |  val buf3 = app(buf, 3) // error
   |                 ^^^
   |                 Separation failure: Illegal access to (buf : Buffer[Int]^),
   |                 which was passed to a @consume parameter on line 11
   |                 and therefore is no longer available.
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:20:17 -----------------------------------------------------
20 |  val buf3 = app(buf1, 4) // error
   |                 ^^^^
   |                 Separation failure: Illegal access to (buf1 : Buffer[Int]^),
   |                 which was passed to a @consume parameter on line 18
   |                 and therefore is no longer available.
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:28:17 -----------------------------------------------------
28 |  val buf3 = app(buf1, 4) // error
   |                 ^^^^
   |                 Separation failure: Illegal access to (buf1 : Buffer[Int]^),
   |                 which was passed to a @consume parameter on line 25
   |                 and therefore is no longer available.
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:38:17 -----------------------------------------------------
38 |  val buf3 = app(buf1, 4) // error
   |                 ^^^^
   |                 Separation failure: Illegal access to (buf1 : Buffer[Int]^),
   |                 which was passed to a @consume parameter on line 33
   |                 and therefore is no longer available.
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:42:8 ------------------------------------------------------
42 |    app(buf, 1)  // error
   |        ^^^
   |        Separation failure: (buf : Buffer[Int]^) appears in a loop,
   |        therefore it cannot be passed to a @consume parameter.
